Add new SVG icons and update styles for Choices component
- Added new SVG icons: check-bold, check-radio, email, location, phone-bordered, telegram-2, telegram-fill, and whatsapp-2.
- Implemented Choices.js component with custom styles and icons.
- Created SCSS files for alert, form control, banner, and footer components with responsive design and theming.
- Enhanced the styling of the Choices dropdown and its items for better usability and appearance.

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,235 @@
-<footer class="footer">
-  <div class="container"></div>
+<footer class="footer pb-80px">
+  <div class="container">
+    <div class="d-flex flex-column flex-xl-row gap-24px justify-content-lg-between br-top pt-24px pt-lg-80px">
+      <div class="footer-contacts">
+        <div class="d-flex flex-column gap-10px gap-lg-18px">
+          <p class="m-0px">Свяжитесь с нами</p>
+          <a href="tel:+88004444852" class="btn btn-phone">8 800 4444 852</a>
+        </div>
+
+        <div>
+          <button type="button" class="btn footer-contacts-callback">
+            <span>Заказать обратный звонок</span>
+            <span class="icon">
+              <svg>
+                <use xlink:href="img/icons/phone-bordered.svg#svg-phone-bordered"></use>
+              </svg>
+            </span>
+          </button>
+        </div>
+      </div>
+
+      <nav class="navbar navbar-footer">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <h3 class="nav-item-title">
+              О компании
+            </h3>
+          </li>
+          <li class="nav-item">
+            <a class="btn nav-link" href="#">
+              История и миссия
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="btn nav-link" href="#">
+              Сертификаты и лицензии
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="btn nav-link" href="#">
+              Партнёры и клиенты
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="btn nav-link" href="#">
+              Новости
+            </a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <h3 class="nav-item-title">
+              Продукты и решения
+            </h3>
+          </li>
+          <li class="nav-item">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <h4 class="nav-item-title">
+                  Майнинг-оборудование
+                </h4>
+              </li>
+              <li class="nav-item">
+                <a class="btn nav-link" href="#">
+                  ASIC-майнеры
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <h4 class="nav-item-title">
+                  Оборудование для дата-центров
+                </h4>
+              </li>
+              <li class="nav-item">
+                <a class="btn nav-link" href="#">
+                  Контейнеры для майнинга
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <h4 class="nav-item-title">
+                  Системы электрификации
+                </h4>
+              </li>
+              <li class="nav-item">
+                <a class="btn nav-link" href="#">
+                  Генераторы и Электростанции
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <h3 class="nav-item-title">
+              Услуги
+            </h3>
+          </li>
+          <li class="nav-item">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <h4 class="nav-item-title">
+                  Размещение в дата центрах
+                </h4>
+              </li>
+              <li class="nav-item">
+                <a class="btn nav-link" href="#">
+                  Дата-центр в Эфиопии
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="btn nav-link" href="#">
+                  Дата-центр в Росии
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <div class="d-contents d-md-flex flex-md-column gap-md-20px">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <h3 class="nav-item-title">
+                Финансовые инструменты
+              </h3>
+            </li>
+            <li class="nav-item">
+              <a class="btn nav-link" href="#">
+                Лизинг оборудования
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="btn nav-link" href="#">
+                Рассрочка под обеспечение
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="btn nav-link" href="#">
+                Факторинг
+              </a>
+            </li>
+          </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <h3 class="nav-item-title">
+                Калькулятор ROI
+              </h3>
+            </li>
+            <li class="nav-item">
+              <a class="btn nav-link" href="#">
+                Расчет доходности майнинга
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="btn nav-link" href="#">
+                Лизинговый калькулятор
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <div class="d-flex justify-content-between mt-24px mt-lg-40px pt-24px pt-lg-48px br-top">
+      <div class="navbar navbar-contacts">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <h3 class="nav-item-title">
+              Контакты
+            </h3>
+          </li>
+          <li class="nav-item">
+            <a class="btn nav-link" href="#">
+              <span class="icon">
+                <svg>
+                  <use xlink:href="img/icons/phone.svg#svg-phone"></use>
+                </svg>
+              </span>
+              <span>+7 (XXX) XXX-XX-XX</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="btn nav-link" href="#">
+              <span class="icon">
+                <svg>
+                  <use xlink:href="img/icons/email.svg#svg-email"></use>
+                </svg>
+              </span>
+              <span>info@rustex.ru</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="btn nav-link" href="#">
+              <span class="icon">
+                <svg>
+                  <use xlink:href="img/icons/location.svg#svg-location"></use>
+                </svg>
+              </span>
+              <span>Москва, ул. Примерная, д. 1</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="mw-520px flex-fill d-flex flex-column-reverse flex-lg-row align-items-end align-self-lg-end justify-content-between gap-16px">
+        @include('brand.html')
+
+        <ul class="navbar-socials">
+          <li class="navbar-item">
+            <a href="#" class="btn nav-link">
+              <span class="icon">
+                <svg>
+                  <use xlink:href="img/icons/telegram-fill.svg#svg-telegram-fill"></use>
+                </svg>
+              </span>
+            </a>
+          </li>
+          <li class="navbar-item">
+            <a href="#" class="btn nav-link">
+              <span class="icon">
+                <svg>
+                  <use xlink:href="img/icons/whatsapp-2.svg#svg-whatsapp-2"></use>
+                </svg>
+              </span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
