--- a/src/scss/bootstrap/_breadcrumb.scss
+++ b/src/scss/bootstrap/_breadcrumb.scss
@@ -41,6 +41,8 @@
     --#{$prefix}btn-padding-y: 0;
 
     --#{$prefix}btn-color: inherit;
+    --#{$prefix}btn-hover-color: var(--#{$prefix}teal);
+    --#{$prefix}btn-active-color: var(--#{$prefix}teal);
   }
 
   .icon {
