--- a/src/scss/bootstrap/_forms.scss
+++ b/src/scss/bootstrap/_forms.scss
@@ -1,6 +1,6 @@
 @import "../../node_modules/bootstrap/scss/forms/labels";
 @import "../../node_modules/bootstrap/scss/forms/form-text";
-@import "../../node_modules/bootstrap/scss/forms/form-control";
+@import "./bootstrap/form-control";
 @import "../../node_modules/bootstrap/scss/forms/form-select";
 @import "./bootstrap/form-check";
 @import "../../node_modules/bootstrap/scss/forms/form-range";
