--- a/src/scss/components/_section.scss
+++ b/src/scss/components/_section.scss
@@ -2,31 +2,22 @@
   position: relative;
 
   &:first-child {
-    margin-bottom: -1rem;
     padding-top: var(--header-height);
+  }
+
+  &:not(:nth-child(1), :nth-child(2)) {
+    margin-top: 2.5rem;
 
     @include media-breakpoint-up(lg) {
-      margin-bottom: -5rem;
+      margin-top: 5rem;
     }
   }
 
-  &:nth-child(2) {
-    border-radius: .75rem .75rem 0 0;
-    padding-top: 1.5rem;
-    background-color: var(--#{$prefix}body-bg);
+  &:last-child {
+    margin-bottom: 2.5rem;
 
     @include media-breakpoint-up(lg) {
-      border-radius: 3.75rem 3.75rem 0 0;
-      padding-top: 1.25rem;
+      margin-top: 5rem;
     }
-  }
-
-  &-background {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    position: absolute;
-    inset: 0;
-    z-index: -1;
   }
 }
