--- a/src/scss/bootstrap/_buttons.scss
+++ b/src/scss/bootstrap/_buttons.scss
@@ -173,15 +173,15 @@
   --#{$prefix}btn-hover-color: var(--#{$prefix}white);
   --#{$prefix}btn-active-color: var(--#{$prefix}white);
 
-  --#{$prefix}btn-bg: linear-gradient(90deg, #FF6536 0%, #FF9271 50%, #FF6536 100%);
-  --#{$prefix}btn-hover-bg: linear-gradient(90deg, #FF6536 0%, #FF9271 50%, #FF6536 100%);
-  --#{$prefix}btn-active-bg: linear-gradient(90deg, #FF6536 0%, #FF9271 50%, #FF6536 100%);
+  --#{$prefix}btn-bg: linear-gradient(90deg, #{$orange-600} 0%, #{$orange-300} 50%, #{$orange-600} 100%);
+  --#{$prefix}btn-hover-bg: linear-gradient(90deg, #{$orange-600} 0%, #{$orange-300} 30%, #{$orange-300} 70%, #{$orange-600} 100%);
+  --#{$prefix}btn-active-bg: linear-gradient(90deg, #{$orange-600} 0%, #{$orange-300} 30%, #{$orange-300} 70%, #{$orange-600} 100%);
 
-  --#{$prefix}btn-border-color: linear-gradient(90deg, rgba(255, 255, 255, .15) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, .15) 100%);
-  --#{$prefix}btn-hover-border-color: linear-gradient(90deg, rgba(255, 255, 255, .15) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, .15) 100%);
-  --#{$prefix}btn-active-border-color: linear-gradient(90deg, rgba(255, 255, 255, .15) 0%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, .15) 100%);
+  --#{$prefix}btn-border-color: linear-gradient(90deg, rgba(var(--#{$prefix}white-rgb), .15) 0%, rgba(var(--#{$prefix}white-rgb), 1) 50%, rgba(var(--#{$prefix}white-rgb), .15) 100%);
+  --#{$prefix}btn-hover-border-color: linear-gradient(90deg, rgba(var(--#{$prefix}white-rgb), .15) 0%, rgba(var(--#{$prefix}white-rgb), 1) 50%, rgba(var(--#{$prefix}white-rgb), .15) 100%);
+  --#{$prefix}btn-active-border-color: linear-gradient(90deg, rgba(var(--#{$prefix}white-rgb), .15) 0%, rgba(var(--#{$prefix}white-rgb), 1) 50%, rgba(var(--#{$prefix}white-rgb), .15) 100%);
 
-  box-shadow: 0 0 .75rem 0 rgba(255, 255, 255, 0.70) inset;
+  box-shadow: 0 0 .75rem 0 rgba(var(--#{$prefix}white-rgb), 0.70) inset;
 }
 
 .btn-teal-400 {
@@ -213,8 +213,8 @@
 .btn-lg-transparent {
 
   @include media-breakpoint-up(lg) {
-    --#{$prefix}btn-hover-color: var(--#{$prefix}btn-color);
-    --#{$prefix}btn-active-color: var(--#{$prefix}btn-color);
+    --#{$prefix}btn-hover-color: var(--#{$prefix}teal-400);
+    --#{$prefix}btn-active-color: var(--#{$prefix}teal-400);
     --#{$prefix}btn-disabled-color: var(--#{$prefix}btn-color);
 
     --#{$prefix}btn-bg: transparent;
@@ -352,6 +352,8 @@
   --bs-btn-line-height: 1;
 
   --bs-btn-color: var(--bs-primary);
+  --bs-btn-hover-color: var(--bs-teal-400);
+  --bs-btn-active-color: var(--bs-teal-400);
 
   display: inline-flex;
   align-items: end;
@@ -359,6 +361,52 @@
 
   .icon {
     --_size: .875rem;
+  }
+}
+
+.btn-telegram {
+  --#{$prefix}btn-font-size: .625rem;
+  --#{$prefix}btn-font-weight: 500;
+
+  --#{$prefix}btn-color: var(--#{$prefix}white);
+  --#{$prefix}btn-hover-color: var(--#{$prefix}white);
+  --#{$prefix}btn-active-color: var(--#{$prefix}white);
+
+  --#{$prefix}btn-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal) 50%, var(--#{$prefix}teal-400) 100%);
+  --#{$prefix}btn-hover-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal) 10%, var(--#{$prefix}teal-400) 100%);
+  --#{$prefix}btn-active-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal) 10%, var(--#{$prefix}teal-400) 100%);
+
+  --#{$prefix}btn-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
+  --#{$prefix}btn-hover-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
+  --#{$prefix}btn-active-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
+  white-space: nowrap;
+  box-shadow: inset 0 0 .875rem 0 rgba(var(--#{$prefix}white-rgb), .70), 0 .25rem 2rem 0 rgba(var(--#{$prefix}teal-rgb), .50)
+}
+
+.btn-more {
+  --#{$prefix}btn-font-size: 1.125rem;
+  --#{$prefix}btn-font-weight: 500;
+
+  --#{$prefix}btn-hover-color: var(--#{$prefix}teal-400);
+  --#{$prefix}btn-active-color: var(--#{$prefix}teal-400);
+
+  display: inline-flex;
+  align-items: center;
+  gap: .25rem .75rem;
+
+  @include media-breakpoint-up(md) {
+    --#{$prefix}btn-font-size: 1.25rem;
+
+    flex-direction: column;
+  }
+
+  .icon {
+    --_size: 1.25rem;
   }
 }
 
