--- a/src/scss/bootstrap/_root.scss
+++ b/src/scss/bootstrap/_root.scss
@@ -43,6 +43,7 @@
   // See https://github.com/sass/sass/issues/2383#issuecomment-336349172
   --#{$prefix}font-sans-serif: #{inspect($font-family-sans-serif)};
   --#{$prefix}font-monospace: #{inspect($font-family-monospace)};
+  --#{$prefix}font-roboto: #{inspect($font-family-roboto)};
   --#{$prefix}gradient: #{$gradient};
 
   // Root and body
@@ -100,13 +101,13 @@
   --#{$prefix}border-color: #{$border-color};
   --#{$prefix}border-color-translucent: #{$border-color-translucent};
 
-  --#{$prefix}border-radius: #{$border-radius};
-  --#{$prefix}border-radius-sm: #{$border-radius-sm};
-  --#{$prefix}border-radius-lg: #{$border-radius-lg};
-  --#{$prefix}border-radius-xl: #{$border-radius-xl};
-  --#{$prefix}border-radius-xxl: #{$border-radius-xxl};
+  --#{$prefix}border-radius: #{map-get($border-radiuses, '6px')};
+  --#{$prefix}border-radius-sm: #{map-get($border-radiuses, '4px')};
+  --#{$prefix}border-radius-lg: #{map-get($border-radiuses, '10px')};
+  --#{$prefix}border-radius-xl: #{map-get($border-radiuses, '16px')};
+  --#{$prefix}border-radius-xxl: #{map-get($border-radiuses, '32px')};
   --#{$prefix}border-radius-2xl: var(--#{$prefix}border-radius-xxl); // Deprecated in v5.3.0 for consistency
-  --#{$prefix}border-radius-pill: #{$border-radius-pill};
+  --#{$prefix}border-radius-pill: #{map-get($border-radiuses, 'pill')};
   // scss-docs-end root-border-var
 
   --#{$prefix}box-shadow: #{$box-shadow};
